# sudoku_solver

./: .gitignore  configure.ac
examples/: 1.txt  2.txt  3.txt  4.txt  5.txt
src/: Makefile.am  brute.c  brute.h  combination.c  combination.h  compat.h  debug.h  io.c  io.h  main.c  position.c  position.h  possibility.c  possibility.h  stack.h  strategic.c  strategic.h  sudoku.c  sudoku.h
src/strategies/: 01_naked_single.c  02_hidden_single.c  03_naked_candidates.c  03_naked_pair_plus.c  04_intersection_removal.c  04_pointing_pair_plus.c  05_claiming_pair_plus.c  05_hidden_candidates.c  05_hidden_pair_plus.c  06_x_wing.c  07_singles_chains.c  08_y_wing.c  09_swordfish.c  all_strategy.h
