bin_PROGRAMS = sudoku_strategic sudoku_brute
sudoku_brute_SOURCES = main.c position.c io.c brute.c
sudoku_strategic_SOURCES = main.c position.c io.c strategic.c possibility.c combination.c
sudoku_strategic_SOURCES += strategies/01_naked_single.c
sudoku_strategic_SOURCES += strategies/02_hidden_single.c
sudoku_strategic_SOURCES += strategies/03_naked_pair_plus.c
#sudoku_strategic_SOURCES += strategies/04_pointing_pair_plus.c
#sudoku_strategic_SOURCES += strategies/05_claiming_pair_plus.c
